// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for 03.asynchronous 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    isLoading={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        placeholder="Type here to simulate an API backed search"
        value=""
      />
    </DropMenu.Control>
  </DropMenu>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for 04.grouped-options 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    isLoading={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.OptionGroup
      isHidden={false}
    >
      Northeast
      <SearchableMultiSelect.Option>
        Connecticut
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Delaware
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Maine
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Maryland
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Massachusetts
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        New Hampshire
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        New Jersey
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        New York
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Pennsylvania
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Rhode Island
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Vermont
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={0}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Connecticut
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={1}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Delaware
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={2}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Maine
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={3}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Maryland
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={4}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Massachusetts
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={5}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              New Hampshire
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={6}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              New Jersey
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={7}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              New York
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={8}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Pennsylvania
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={9}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Rhode Island
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={10}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Vermont
            </span>
          </label>
        </div>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
    >
      Southeast
      <SearchableMultiSelect.Option>
        Alabama
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Arkansas
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Florida
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Georgia
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Kentucky
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Louisiana
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Mississippi
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        North Carolina
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        South Carolina
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Tennessee
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Virginia
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        West Virginia
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={11}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Alabama
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={12}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Arkansas
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={13}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Florida
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={14}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Georgia
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={15}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Kentucky
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={16}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Louisiana
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={17}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Mississippi
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={18}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              North Carolina
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={19}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              South Carolina
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={20}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Tennessee
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={21}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Virginia
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={22}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              West Virginia
            </span>
          </label>
        </div>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
    >
      Midwest
      <SearchableMultiSelect.Option>
        Illinois
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Indiana
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Iowa
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Kansas
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Michigan
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Minnesota
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Missouri
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Nebraska
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        North Dakota
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Ohio
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        South Dakota
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Wisconsin
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={23}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Illinois
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={24}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Indiana
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={25}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Iowa
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={26}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Kansas
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={27}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Michigan
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={28}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Minnesota
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={29}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Missouri
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={30}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Nebraska
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={31}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              North Dakota
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={32}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Ohio
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={33}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              South Dakota
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={34}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Wisconsin
            </span>
          </label>
        </div>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
    >
      Southwest
      <SearchableMultiSelect.Option>
        Arizona
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        New Mexico
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Oklahoma
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Texas
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={35}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Arizona
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={36}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              New Mexico
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={37}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Oklahoma
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={38}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Texas
            </span>
          </label>
        </div>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
    >
      West
      <SearchableMultiSelect.Option>
        California
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Colorado
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Idaho
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Montana
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Nevada
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Oregon
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Utah
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Washington
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option>
        Wyoming
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={39}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              California
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={40}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Colorado
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={41}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Idaho
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={42}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Montana
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={43}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Nevada
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={44}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Oregon
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={45}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Utah
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={46}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Washington
            </span>
          </label>
        </div>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
      >
        <div
          className="lucid-SearchableMultiSelect-checkbox"
        >
          <Checkbox
            callbackId={47}
            isDisabled={false}
            isIndeterminate={false}
            isSelected={false}
            onSelect={[Function]}
          />
          <label
            className="lucid-SearchableMultiSelect-checkbox-label"
          >
            <span
              className="lucid-SearchableMultiSelect-Option-underline-post"
            >
              Wyoming
            </span>
          </label>
        </div>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={48}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Alaska
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={49}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Hawaii
          </span>
        </label>
      </div>
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for 05.custom-selection-label 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    isLoading={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={0}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Alabama
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={1}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Alaska
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={2}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Arizona
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={3}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Arkansas
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={4}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            California
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={5}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Colorado
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={6}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Connecticut
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={7}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Delaware
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={8}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Florida
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={9}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Georgia
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={10}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Hawaii
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={11}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Idaho
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={12}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Illinois
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={13}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Indiana
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={14}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Iowa
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={15}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Kansas
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={16}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Kentucky
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={17}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Louisiana
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={18}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Maine
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={19}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Maryland
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={20}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Massachusetts
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={21}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Michigan
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={22}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Minnesota
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={23}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Mississippi
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={24}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Missouri
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={25}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Montana Nebraska
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={26}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Nevada
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={27}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            New Hampshire
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={28}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            New Jersey
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={29}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            New Mexico
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={30}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            New York
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={31}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            North Carolina
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={32}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            North Dakota
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={33}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Ohio
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={34}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Oklahoma
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={35}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Oregon
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={36}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Pennsylvania Rhode Island
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={37}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            South Carolina
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={38}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            South Dakota
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={39}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Tennessee
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={40}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Texas
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={41}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Utah
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={42}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Vermont
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={43}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Virginia
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={44}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Washington
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={45}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            West Virginia
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={46}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Wisconsin
          </span>
        </label>
      </div>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
    >
      <div
        className="lucid-SearchableMultiSelect-checkbox"
      >
        <Checkbox
          callbackId={47}
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        />
        <label
          className="lucid-SearchableMultiSelect-checkbox-label"
        >
          <span
            className="lucid-SearchableMultiSelect-Option-underline-post"
          >
            Wyoming
          </span>
        </label>
      </div>
    </DropMenu.Option>
  </DropMenu>
</div>
`;
